--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-body{
-    background-image: url("/workspaces/iks/Screenshot 2023-11-19 131106.png") ;
+html{
+    background-image:url() ;
 }
 h1{
     font-size: 50px;
