--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,9 @@ p{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-style:oblique ;
 }
-#title{
-    color: aqua;
+.header{
+    color: blue;
+    padding-left: 18%;
+    background-color: antiquewhite;
+    height: 100px;
 }
