--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,6 @@ body{
 h1{
     font-size: 50px;
 }
-#hgroup{
-    border: 4px solid black;
-}
 
 #login{
    font-size: 19px; 
@@ -34,9 +31,10 @@ p{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-style:oblique ;
 }
-.header{
-    color: blue;
-    padding-left: 18%;
-    background-color: antiquewhite;
-    height: 100px;
+header{ 
+    border: 10px inset black;
+    padding: 10% ;
+}
+footer{
+    font-family: Georgia;
 }
