--- a/page2/page2.css
+++ b/page2/page2.css
@@ -5,5 +5,5 @@
   font-optical-sizing: auto;
   font-weight: 900;
   font-style: normal;
-  background-image: url()
+  background-image: url("media/5192479.jpg");
 };
