--- a/page2/page2.css
+++ b/page2/page2.css
@@ -1,13 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
-
- *{
-  background-image : url("media\hot.png");
-}
-
-h1 {
-  color: red;
-}
-
-p {
-  font-size: 16px;
-}
+html{
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
+;
+};
