--- a/page2/page2.css
+++ b/page2/page2.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 
 *{ 
-  background-image:url("/media/bet.jpg");
+  background-image:url("/media/Paid.jpg");
+
 }
 * {
   font-family: "Orbitron", sans-serif;
   font-optical-sizing: auto;
   font-weight: weight;
   font-style: normal;
+  color: white  ;
 }
