--- a/list/list.css
+++ b/list/list.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Honk&display=swap');
 *{
     font-family: 'Honk', system-ui;
-    background-color:hsl(from grey 77 40% 20%);
     font-size: 50px;
     text-align: center;
+    background-image: url('/media/ash.jpg' ) ;
+    
 }
