--- a/list/list.css
+++ b/list/list.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Honk&display=swap');
-*{
+* {
     font-family: 'Honk', system-ui;
     font-size: 50px;
     text-align: center;
-    background-image: url('/media/ash.jpg' ) ;
-    
+    background-image: url('/media/ash.jpg');
+}
+
+#imagecat>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
