--- a/list/list.css
+++ b/list/list.css
@@ -1,12 +1,77 @@
-@import url('https://fonts.googleapis.com/css2?family=Honk&display=swap');
-* {
-    font-family: 'Honk', system-ui;
-    font-size: 50px;
-    text-align: center;
-    background-image: url('/media/ash.jpg');
-}
-
-#imagecat>img {
-    width: 50%;
-    height: 100%;
-}
+                            @import url('https://fonts.googleapis.com/css2?family=Honk&display=swap');
+                            * {
+                                font-family: 'Honk', system-ui;
+                                font-size: 50px;
+                                text-align: center;
+                                background-image: url('/media/ash.jpg');
+                            }
+                            
+                            #imageCat {
+                                width: 50%;
+                                margin: auto;
+                            }
+                            
+                            #imageCat>img {
+                                width: 100%;
+                                opacity: 1;
+                                transition: opacity 0.5s;
+                                -webkit-transition: opacity 0.5s;
+                                -moz-transition: opacity 0.5s;
+                                -o-transition: opacity 0.5s;
+                            }
+                            
+                            #prev,
+                            #next {
+                                display: inline-block;
+                                padding: 8px 12px;
+                                width: auto;
+                                overflow: hidden;
+                                text-align: center;
+                                vertical-align: middle;
+                                outline: none;
+                                /* inherit font & color from ancestor */
+                                color: inherit;
+                                font: inherit;
+                                /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
+                                line-height: normal;
+                                /* Corrects font smoothing for webkit */
+                                -webkit-font-smoothing: inherit;
+                                -moz-osx-font-smoothing: inherit;
+                                /* Corrects inability to style clickable `input` types in iOS */
+                                -webkit-appearance: none;
+                                cursor: pointer;
+                                /* colors */
+                                color: white;
+                                background-color: rgba(0, 0, 0, 0.8);
+                                /* border */
+                                border-radius: 90px;
+                                /* CSS Transitions */
+                                transition: background-color 0.5s ease;
+                                -webkit-transition: background-color 0.5s ease;
+                                -moz-transition: background-color 0.5s ease;
+                                -o-transition: background-color 0.5s ease;
+                                transition: color 0.5s ease;
+                                -webkit-transition: color 0.5s ease;
+                                -moz-transition: color 0.5s ease;
+                                -o-transition: color 0.5s ease;
+                            }
+                            
+                            #prev:hover,
+                            #next:hover {
+                                color: black;
+                                background: white;
+                            }
+                            /* Positioning */
+                            
+                            #next {
+                                position: absolute;
+                                top: 120%;
+                                margin-left: 5px;
+                            }
+                            
+                            #prev {
+                                position: absolute;
+                                top: 120%;
+                                right: 74%;
+                                margin-right: 10px;
+                            }
