--- a/exam/test.css
+++ b/exam/test.css
@@ -4,9 +4,24 @@
     font-style: bold;
     font-family: cursive;
     font-weight: bolder;
+    width: 50%;
+    padding: 20px;
+    margin: 10px 50px;
 }
 
 h1,
 h2 {
     font-style: bold;
+}
+
+#pic {
+    width: 50%;
+    height: 50%;
+    border: 1px solid black;
+}
+
+hgroup {
+    font-style: italic;
+    font-family: cursive;
+    font-weight: bolder;
 }
